--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <a class="header-menu__nav-link" href="#">Тренеры</a>
                <a class="header-menu__nav-link" href="#">Стоимость</a>
             </div>
-            <div class="header-menu__contacts"><a class="text" href="#">+7 800 000 11 22</a></div>         
+            <div class="header-menu__contacts"><a class="text" href="#">+7 800 000 11 22</a></div>   
          </div>
          <div class="header-content">
             <div class="header-content__left">
@@ -27,11 +27,12 @@
                <a class="header-content__left-btn" href="#">Записаться на курс</a>
             </div>
             <div class="header-content__right">
-               <img class="header-content__right-img" src="img/header/header.png" alt="photo">
+               <img class="header-content__right-img" src="/img/header/header.png" alt="photo">
             </div>  
          </div>
       </div>
    </header>
+
 
    <section>
       <div class="bg-blue">
