сделал background-image

--- a/index.html
+++ b/index.html
@@ -26,15 +26,61 @@
                <a class="header-content__left-btn" href="#">Записаться на курс</a>
             </div>
             <div class="header-content__right">
-               <img class="header-content__right-img" src="/img/header/header.png" alt="photo">
+               <!-- <img class="header-content__right-img" src="/img/header/header.png" alt="photo"> -->
             </div>  
          </div>
       </div>
    </header>
 
-
    <section>
-
+      <div class="container-text">
+          <div class="content-text">
+            <div class="content-text__top">
+               <div class="content-text__text">
+                  <p class="content-text__text-tittle"><span class="tittle-h1">Robo School</span> – учреждение для формирования кадрового педагогического резерва в сфере робототехники и&nbsp;программирования</p>
+               </div>
+               <div class="content-text__item">
+                  <div class="content-text__item-info">
+                     <h2 class="tittle">10</h2>
+                     <p class="subtittle">УМК по различным направлениям по робототехнике</p>
+                  </div>
+                  <div class="content-text__item-info">
+                     <h2 class="tittle">20</h2>
+                     <p class="subtittle">Школ, в которых запущена робототехника</p>
+                  </div>
+                  <div class="content-text__item-info">
+                     <h2 class="tittle">100</h2>
+                     <p class="subtittle">Педагогов прошедших курсы повышения квалификации</p>
+                  </div>
+                  <div class="content-text__item-info">
+                     <h2 class="tittle">10 000</h2>
+                     <p class="subtittle">Обученных детей на базе собственных центров</p>
+                  </div>
+               </div> 
+            </div>
+            <!-- !razriv -->
+            <div class="content-text__bottom">
+               <div class="content-text__text-bottom">
+                  <span class="tittle-h1">Что вы получите после курса</span>
+               </div>
+               <div class="content-text__item-bottom">
+                  <div class="content-text__item-bottom-info">
+                     <h2 class="bottom-tittle">Удостоверение</h2>
+                     <p class="bottom-subtittle">Дающее право преподавать робототехнику для детей 6-12 лет в образовательных учреждениях</p>
+                  </div>
+                  <div class="content-text__item-bottom-info">
+                     <h2 class="bottom-tittle">Знания</h2>
+                     <p class="bottom-subtittle">По основам разработки учебно-методических комплексов
+                        по робототехнике и программированию</p>
+                  </div>
+                  <div class="content-text__item-bottom-info">
+                     <h2 class="bottom-tittle">Практику</h2>
+                     <p class="bottom-subtittle">Возможность пройти практику  по преподаванию робототехники на базе R:ED&nbsp;LAB (в оффлайн или онлайн формате)</p>
+                  </div>
+               </div> 
+            </div>
+          </div>
+      </div>
    </section>
 
 </body>
